# era-compiler-vyper

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  versions.json
.cargo/: config.toml
.github/actions/build-llvm/: action.yml
.github/actions/cli-tests/: action.yml
.github/actions/install-vyper/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/unit-tests/: action.yml
.github/workflows/: build_release.yaml  ccache-regen.yaml  cli-test-from-precompiled-binaries.yaml  cli-test-from-sources.yaml  cli_test_run.yaml  dependencies.yaml  release.yaml  sanitizers.yaml  test-cli.yaml  test.yaml  unit-tests.yaml
cli-tests/: package-lock.json  package.json
cli-tests/src/: entities.ts  helper.ts
cli-tests/src/contracts/llvm/: contract.ll
cli-tests/src/contracts/vyper/: contract.vy  ecrecover.vy  extcode.vy  txorigin.vy
cli-tests/tests/: common.test.ts  debug-output-dir.test.ts  disable-vyper-optimizer.test.ts  eravm-assembly.test.ts  fallback.test.ts  format.test.ts  llvm-debug-log.test.ts  llvm-ir.test.ts  llvm-verify-each.test.ts  metadata-hash.test.ts  optimization.test.ts  output-dir.test.ts  overwrite.test.ts  recursive-process.test.ts  suppress.test.ts  vyper.test.ts  zkasm.test.ts
docs/: README.md  book.toml
docs/src/: 01-installation.md  02-command-line-interface.md  03-combined-json.md  SUMMARY.md
docs/src/guides/: 01-sanitizers.md
src/: const.rs  lib.rs  message_type.rs  tests.rs  warning_type.rs
src/metadata/: function.rs  mod.rs
src/process/: input.rs  mod.rs  output.rs
src/project/: dependency_data.rs  mod.rs
src/project/contract/: eravm_assembly.rs  llvm_ir.rs  metadata.rs  mod.rs  zkasm.rs
src/project/contract/vyper/: ast.rs  function.rs  mod.rs
src/project/contract/vyper/expression/: mod.rs
src/project/contract/vyper/expression/instruction/: assert.rs  clamp.rs  create.rs  deploy.rs  exit_to.rs  goto.rs  if.rs  immutable.rs  label.rs  mod.rs  offset.rs  repeat.rs  return.rs  revert.rs  seq.rs  set.rs  with.rs
src/tests/: builtins.rs  mod.rs  optimizer.rs  unsupported_opcodes.rs  warnings.rs
src/tests/cli-tests/: package-lock.json  package.json
src/tests/cli-tests/src/: helper.ts
src/tests/cli-tests/tests/: common.test.ts
src/tests/contracts/: optimizer.vy
src/vyper/: mod.rs  selection.rs  selector.rs  version.rs
src/vyper/combined_json/: contract.rs  extra_data.rs  mod.rs
src/vyper/combined_json/contract/: mod.rs  warning.rs
src/vyper/standard_json/: mod.rs
src/vyper/standard_json/input/: language.rs  mod.rs  source.rs
src/vyper/standard_json/input/settings/: evm_version.rs  mod.rs  optimize.rs  selection.rs
src/vyper/standard_json/output/: error.rs  mod.rs
src/vyper/standard_json/output/contract/: evm.rs  mod.rs
src/zkvyper/: arguments.rs  main.rs
tests/: cli_tests.rs  common.rs  regression_tests.rs  test_cli.rs  test_unit.rs  vyper-bin.json
tests/cli/: basic.rs  debug_output_dir.rs  disable_vyper_optimizer.rs  disassemble.rs  disassembler.rs  eravm_assembly.rs  evm_version.rs  fallback.rs  fallback_oz.rs  format.rs  llvm_debug_log.rs  llvm_debug_logging.rs  llvm_ir.rs  llvm_options.rs  llvm_verify_each.rs  metadata_hash.rs  mod.rs  no_bytecode_metadata.rs  optimization.rs  output_dir.rs  overwrite.rs  recursive_process.rs  search_paths.rs  suppress.rs  suppress_warnings.rs  threads.rs  version.rs  vyper.rs
tests/cli/contracts/vyper/: txorigin.vy
tests/common/: const.rs  mod.rs
tests/data/contracts/json/: default.json
tests/data/contracts/llvm/: default.ll
tests/data/contracts/vyper/: create_copy_of.vy  create_minimal_proxy_to.vy  greeter.vy  raw_create.vy  selfdestruct.vy  tx_origin.vy
tests/regression/: builtins.rs  mod.rs  optimizer.rs  unsupported_opcodes.rs  warnings.rs
tests/regression/contracts/: tx_origin.vy
tests/unit/: builtins.rs  mod.rs  optimizer.rs  unsupported_opcodes.rs  warnings.rs
v1.5.10/: 01-installation.html  02-command-line-interface.html  03-combined-json.html  404.html  print.html  searchindex.js  searchindex.json  toc.js
v1.5.11/: 01-installation.html  02-command-line-interface.html  print.html  searchindex.js  searchindex.json
v1.5.11/guides/: 01-sanitizers.html
v1.5.8/: 03-combined-json.html  404.html  print.html
v1.5.8/guides/: 01-sanitizers.html
v1.5.9/: 01-installation.html  02-command-line-interface.html  searchindex.js  searchindex.json  toc.html  toc.js
