[package]
name = "era-compiler-vyper"
version = "1.5.5"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Vyper compiler for ZKsync"
links = "compiler-rt-zkvyper"

[[bin]]
name = "zkvyper"
path = "src/zkvyper/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
which = "6.0"
path-slash = "0.2"
normpath = "1.2"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
lazy_static = "1.4"
hex = "0.4"

zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs", branch = "v1.5.0" }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "az-cpr-1664-support-linking-deploy-and-runtime-code" }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "az-cpr-1664-support-linking-deploy-and-runtime-code"
default-features = false
features = ["llvm17-0", "no-libffi-linking", "target-eravm", "target-evm"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", default-features = false }
