[package]
name = "era-compiler-vyper"
version = "1.5.8"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Vyper compiler for ZKsync"
links = "compiler-rt-zkvyper"

[[bin]]
name = "zkvyper"
path = "src/zkvyper/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "=4.5.21", features = ["derive"] }
anyhow = "=1.0.89"
which = "=6.0.3"
path-slash = "=0.2.1"
normpath = "=1.3.0"
rayon = "=1.10.0"

serde = { version = "=1.0.210", "features" = [ "derive" ] }
serde_json = { version = "=1.0.128", features = [ "arbitrary_precision" ] }
semver = { version = "=1.0.23", features = [ "serde" ] }
lazy_static = "=1.5.0"
hex = "=0.4.3"

zkevm_opcode_defs = "=0.150.6"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "az-add-zkvyper-docs" }

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.12.0"
reqwest = { version = "=0.11.27", features = ["blocking", "json"] }
era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-17"
default-features = false
features = ["llvm17-0", "no-libffi-linking", "target-eravm", "target-evm"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "*", default-features = false }
