[package]
name = "era-compiler-vyper"
version = "1.5.11"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Vyper compiler for ZKsync"
links = "compiler-rt-zkvyper"

[[bin]]
name = "zkvyper"
path = "src/zkvyper/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
boolinator = "2.4"
which = "7.0"
path-slash = "0.2"
normpath = "1.3"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
lazy_static = "1.5"
hex = "0.4"

zkevm_opcode_defs = { git = "https://github.com/matter-labs/zksync-protocol", branch = "main" }
era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
test-case = "3.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }

era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-19"
default-features = false
features = ["llvm19-1", "serde", "no-libffi-linking", "target-eravm", "target-evm"]
